--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -55,13 +55,13 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="product-list.html" class="nav-item nav-link">Products</a>
                             <a href="product-detail.html" class="nav-item nav-link">Product Detail</a>
-                            <a href="cart.html" class="nav-item nav-link">Cart</a>
+                            <a href="cart.html" class="nav-item nav-link active">Cart</a>
                             <a href="checkout.html" class="nav-item nav-link">Checkout</a>
                             <a href="my-account.html" class="nav-item nav-link">My Account</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">More Pages</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
                                 <div class="dropdown-menu">
-                                    <a href="wishlist.html" class="dropdown-item active">Wishlist</a>
+                                    <a href="wishlist.html" class="dropdown-item">Wishlist</a>
                                     <a href="login.html" class="dropdown-item">Login & Register</a>
                                     <a href="contact.html" class="dropdown-item">Contact Us</a>
                                 </div>
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <!-- Bottom Bar End --> 
+        <!-- Bottom Bar End -->
         
         <!-- Breadcrumb Start -->
         <div class="breadcrumb-wrap">
@@ -122,18 +122,18 @@
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Products</a></li>
-                    <li class="breadcrumb-item active">Wishlist</li>
+                    <li class="breadcrumb-item active">Cart</li>
                 </ul>
             </div>
         </div>
         <!-- Breadcrumb End -->
         
-        <!-- Wishlist Start -->
-        <div class="wishlist-page">
+        <!-- Cart Start -->
+        <div class="cart-page">
             <div class="container-fluid">
-                <div class="wishlist-page-inner">
-                    <div class="row">
-                        <div class="col-md-12">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="cart-page-inner">
                             <div class="table-responsive">
                                 <table class="table table-bordered">
                                     <thead class="thead-dark">
@@ -141,7 +141,7 @@
                                             <th>Product</th>
                                             <th>Price</th>
                                             <th>Quantity</th>
-                                            <th>Add to Cart</th>
+                                            <th>Total</th>
                                             <th>Remove</th>
                                         </tr>
                                     </thead>
@@ -149,7 +149,7 @@
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="#"><img src="img/product-6.jpg" alt="Image"></a>
+                                                    <a href="#"><img src="img/product-1.jpg" alt="Image"></a>
                                                     <p>Product Name</p>
                                                 </div>
                                             </td>
@@ -161,13 +161,13 @@
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td><button class="btn-cart">Add to Cart</button></td>
+                                            <td>$99</td>
                                             <td><button><i class="fa fa-trash"></i></button></td>
                                         </tr>
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="#"><img src="img/product-7.jpg" alt="Image"></a>
+                                                    <a href="#"><img src="img/product-2.jpg" alt="Image"></a>
                                                     <p>Product Name</p>
                                                 </div>
                                             </td>
@@ -179,13 +179,13 @@
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td><button class="btn-cart">Add to Cart</button></td>
+                                            <td>$99</td>
                                             <td><button><i class="fa fa-trash"></i></button></td>
                                         </tr>
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="#"><img src="img/product-8.jpg" alt="Image"></a>
+                                                    <a href="#"><img src="img/product-3.jpg" alt="Image"></a>
                                                     <p>Product Name</p>
                                                 </div>
                                             </td>
@@ -197,13 +197,13 @@
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td><button class="btn-cart">Add to Cart</button></td>
+                                            <td>$99</td>
                                             <td><button><i class="fa fa-trash"></i></button></td>
                                         </tr>
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="#"><img src="img/product-9.jpg" alt="Image"></a>
+                                                    <a href="#"><img src="img/product-4.jpg" alt="Image"></a>
                                                     <p>Product Name</p>
                                                 </div>
                                             </td>
@@ -215,13 +215,13 @@
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td><button class="btn-cart">Add to Cart</button></td>
+                                            <td>$99</td>
                                             <td><button><i class="fa fa-trash"></i></button></td>
                                         </tr>
                                         <tr>
                                             <td>
                                                 <div class="img">
-                                                    <a href="#"><img src="img/product-10.jpg" alt="Image"></a>
+                                                    <a href="#"><img src="img/product-5.jpg" alt="Image"></a>
                                                     <p>Product Name</p>
                                                 </div>
                                             </td>
@@ -233,7 +233,7 @@
                                                     <button class="btn-plus"><i class="fa fa-plus"></i></button>
                                                 </div>
                                             </td>
-                                            <td><button class="btn-cart">Add to Cart</button></td>
+                                            <td>$99</td>
                                             <td><button><i class="fa fa-trash"></i></button></td>
                                         </tr>
                                     </tbody>
@@ -241,10 +241,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4">
+                        <div class="cart-page-inner">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="coupon">
+                                        <input type="text" placeholder="Coupon Code">
+                                        <button>Apply Code</button>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="cart-summary">
+                                        <div class="cart-content">
+                                            <h1>Cart Summary</h1>
+                                            <p>Sub Total<span>$99</span></p>
+                                            <p>Shipping Cost<span>$1</span></p>
+                                            <h2>Grand Total<span>$100</span></h2>
+                                        </div>
+                                        <div class="cart-btn">
+                                            <button>Update Cart</button>
+                                            <button>Checkout</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <!-- Wishlist End -->
+        <!-- Cart End -->
         
         <!-- Footer Start -->
         <div class="footer">
@@ -334,7 +360,7 @@
                 </div>
             </div>
         </div>
-        <!-- Footer Bottom End -->      
+        <!-- Footer Bottom End -->       
         
         <!-- Back to Top -->
         <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
