--- a/shop/templates/login.html
+++ b/shop/templates/login.html
@@ -90,6 +90,8 @@
 
             <input type="submit" value="Login">
         </form>
+        <p>حساب کاربری ندارید؟ <a href="/signup">ایجاد حساب کاربری</a></p>
+
     </div>
 
     <!-- اسکریپت برای نمایش خودکار مودال -->
