--- a/shop/templates/signup.html
+++ b/shop/templates/signup.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
       background:linear-gradient(to right, #c21500, #ffc500);
-            
+
             display: flex;
             justify-content: center;
             align-items: center;
@@ -78,17 +78,25 @@
 <body>
     <div class="signup-container">
         <h2>Sign Up</h2>
-        <form id="signup-form" action="/signup" method="POST">
-            <input type="text" id="username" name="username" placeholder="Username" required>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-            <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm Password" required>
+        <form id="signup-form" action="{% url 'signup' %}" method="POST">
+            {% csrf_token %}
+            <label class="form-label">u</label>
+                        {{ form.username }}
+                        {{ form.username.errors }}
+            <label class="form-label">e</label>
+                        {{ form.email }}
+                        {{ form.email.errors }}
+            <label class="form-label">p1</label>
+                        {{ form.password1 }}
+                        {{ form.password1.errors }}
+            <label class="form-label">p2</label>
+                        {{ form.password2 }}
+                        {{ form.password2.errors }}
             <div id="password-error" class="error-message">Passwords do not match.</div>
             <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="/login">Log in</a></p>
+        <p>حساب کاربری دارید؟ <a href="/login">ورود</a></p>
     </div>
-
     <script>
         // JavaScript for password validation
         const form = document.getElementById('signup-form');
